On Order APi project; Address->Owned,Order,OrderItems,OrderStatus->enum created,EF packages downloaded ,Db connection configuration codes added wilt also AppDbContext and migration made

--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlCon": "Data Source=LAPTOP-C69QBP3E;Initial Catalog=OrderApiDb;User ID=sa;Password=123456789?;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
