--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "SqlCon": "Data Source=LAPTOP-C69QBP3E;Initial Catalog=OrderApiDb;User ID=sa;Password=123456789?;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlCon": "Data Source=LAPTOP-C69QBP3E;Initial Catalog=OrderApiDb;User ID=sa;Password=123456789?;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "RabbitMQAMQPURL": "amqps://nebwawpv:oLjL_pNa-JYI3WVvNsThRAcN1dzTj2UT@shark.rmq.cloudamqp.com/nebwawpv"
+
   },
   "Logging": {
     "LogLevel": {
