--- a/Stock.API/appsettings.json
+++ b/Stock.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RabbitMQAMQPURL": "amqps://nebwawpv:oLjL_pNa-JYI3WVvNsThRAcN1dzTj2UT@shark.rmq.cloudamqp.com/nebwawpv"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
