StockReservedEventConsumer created in payment.Api and PaymentFailledEvent,PaymentSuccessEvent and on program.cs it is configuration codes added.

--- a/Payment.API/appsettings.json
+++ b/Payment.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "RabbitMQAMQPURL": "amqps://nebwawpv:oLjL_pNa-JYI3WVvNsThRAcN1dzTj2UT@shark.rmq.cloudamqp.com/nebwawpv"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
