all the consumers from choreography pattern removed and it is program.cs codes too

--- a/Payment.API/Payment.API.csproj
+++ b/Payment.API/Payment.API.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Consumers\" />
+  </ItemGroup>
+
 </Project>
