OrderStateMachine configuretion settings codes added

--- a/SagaStateMachineWorkerService/appsettings.json
+++ b/SagaStateMachineWorkerService/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "SqlCon": "Data Source=LAPTOP-C69QBP3E;Initial Catalog=SagaInstanceDb;User ID=sa;Password=123456789?;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "RabbitMQAMQPURL": "amqps://nebwawpv:oLjL_pNa-JYI3WVvNsThRAcN1dzTj2UT@shark.rmq.cloudamqp.com/nebwawpv"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
