--- a/SagaStateMachineWorkerService/SagaStateMachineWorkerService.csproj
+++ b/SagaStateMachineWorkerService/SagaStateMachineWorkerService.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
 </Project>
