ef core packages added, appDbContext,product model created migration made

--- a/EventSourcing.API/appsettings.json
+++ b/EventSourcing.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "SqlConnection": "Data Source=LAPTOP-C69QBP3E;Initial Catalog=EventSourcingProductDb;User ID=sa;Password=123456789?;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "EventStore": "ConnectTo=tcp://localhost:1115;DefaultUserCredentials=admin:changeit;UseSslConnection=true;TargetHost=eventstore.org;ValidateServer=false"
   },
   "Logging": {
